--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
     "next": "12.1.6",
+    "node-fetch": "^3.2.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "replit-login": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
