--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.3.1",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "next": "12.1.6",
