--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@hcaptcha/react-hcaptcha": "^1.3.1",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
+    "crosis4furrets": "^0.0.1-beta.7",
+    "dotenv": "^16.0.1",
     "next": "12.1.6",
     "node-fetch": "^3.2.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "replit-login": "^2.0.0"
+    "replit-login": "^2.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
