--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.3.1",
+    "bootstrap": "^5.1.3",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "crosis4furrets": "^0.0.1-beta.7",
@@ -17,6 +18,7 @@
     "next": "12.1.6",
     "node-fetch": "^3.2.6",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "replit-login": "^2.0.0",
     "swr": "^1.3.0"
